--- a/index.html
+++ b/index.html
@@ -17,7 +17,40 @@
 
 <div class="container-fluid">
   <div class="row">
-    <section class="col-sm-8 col-sm-push-2">
+    <div class="sports-icon-list sports-list-top visible-md">
+      <div>
+        <a href="downhill.html">
+          <img src="images/icon-downhill.png" alt="Downhill"/>
+          <h6>Downhill</h6>
+        </a>
+
+        <a href="snowboarding.html">
+          <img src="images/icon-snowboard.png" alt="Snowboarding"/>
+          <h6>Snowboarding</h6>
+        </a>
+
+        <a href="bobsled.html">
+          <img src="images/icon-bobsled.png" alt="Bobsled"/>
+          <h6>Bobsled</h6>
+        </a>
+
+        <a href="cross-country.html">
+          <img src="images/icon-cross-country.png" alt="Cross Country"/>
+          <h6>Cross Country</h6>
+        </a>
+
+        <a href="biathlon.html">
+          <img src="images/icon-biathlon.png" alt="Biathlon"/>
+          <h6>Biathlon</h6>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid container-sm-height">
+  <div class="row row-sm-height">
+    <section class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 col-sm-height">
       <article>
         <h2>Why I Went Into the Lake</h2>
         <img src="images/lake.jpg" />
@@ -62,7 +95,7 @@
       </article>
     </section>
 
-    <aside class="col-sm-2 col-sm-pull-8">
+    <aside class="col-sm-3 col-sm-pull-9 col-lg-2 col-lg-pull-8 col-sm-height">
       <h4 class="range-title">
         <b>Mountain Ranges</b>
       </h4>
@@ -95,7 +128,7 @@
       </div>
     </aside>
 
-    <aside class="sports-icon-list col-sm-2">
+    <aside class="sports-icon-list col-xs-12 col-lg-2 hidden-md col-sm-height">
       <a href="downhill.html">
         <img src="images/icon-downhill.png" alt="Downhill" />
         <h6>Downhill</h6>
