--- a/index.html
+++ b/index.html
@@ -7,28 +7,33 @@
   <title>Title</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="Content/jquery.fs.wallpaper.css" type="text/css">
   <link rel="stylesheet" href="Content/app.css" type="text/css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
   <script src="Scripts/classie.js"></script>
   <script src="Scripts/cbpAnimatedHeader.js"></script>
+  <script src="Scripts/jquery.fs.wallpaper.min.js"></script>
+  <script src="Scripts/script.js"></script>
 
 </head>
 
 <body>
-<header>
+<header id="video-wallpaper">
   <nav class="navbar navbar-inverse navbar-fixed-top cbp-af-header">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#top"><img src="images/site-logo-white.png" alt=""></a>
+        <a href="#top"><img src="images/site-logo-white-70pct.png" alt=""></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,144 +50,29 @@
 </header>
 
 <div class="container-fluid">
-  <div class="row">
-    <div class="sports-icon-list sports-list-top visible-md">
-      <div>
-        <a href="downhill.html">
-          <img src="images/icon-downhill.png" alt="Downhill"/>
-          <h6>Downhill</h6>
-        </a>
+  <div class="row content-filler">
 
-        <a href="snowboarding.html">
-          <img src="images/icon-snowboard.png" alt="Snowboarding"/>
-          <h6>Snowboarding</h6>
-        </a>
-
-        <a href="bobsled.html">
-          <img src="images/icon-bobsled.png" alt="Bobsled"/>
-          <h6>Bobsled</h6>
-        </a>
-
-        <a href="cross-country.html">
-          <img src="images/icon-cross-country.png" alt="Cross Country"/>
-          <h6>Cross Country</h6>
-        </a>
-
-        <a href="biathlon.html">
-          <img src="images/icon-biathlon.png" alt="Biathlon"/>
-          <h6>Biathlon</h6>
-        </a>
-      </div>
-    </div>
   </div>
-</div>
 
-<div class="container-fluid container-sm-height">
-  <div class="row row-sm-height">
-    <section class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 col-sm-height">
-      <article>
-        <h2>Why I Went Into the Lake</h2>
-        <img src="images/lake.jpg" />
-        <div class="row">
-          <p class="col-sm-10">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <div class="col-sm-2">
-            <input type="button" class="btn btn-primary" value="More..." />
-          </div>
-        </div>
-      </article>
+  <div class="row">
+    <div class="fill-screen fixed-attachment" style="background-image: url(images/elk.jpg)"></div>
+  </div>
+  <div class="row content-filler">
 
-      <article>
-        <h2>My Name is NOT Bullwinkle</h2>
-        <img src="images/elk.jpg" />
-        <div class="row">
-          <p class="col-sm-10">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <div class="col-sm-2">
-            <input type="button" class="btn btn-primary" value="More..." />
-          </div>
-        </div>
-      </article>
+  </div>
 
-      <article>
-        <h2>There's Gotta be a Penguin Up Here Somewhere</h2>
-        <img src="images/snowboarder.jpg" />
-        <div class="row">
-          <p class="col-sm-10">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </p>
-          <div class="col-sm-2">
-            <input type="button" class="btn btn-primary" value="More..." />
-          </div>
-        </div>
-      </article>
-    </section>
+  <div class="row">
+    <div class="fill-screen fixed-attachment" style="background-image: url(images/snowboarder.jpg)"></div>
+  </div>
+  <div class="row content-filler">
 
-    <aside class="col-sm-3 col-sm-pull-9 col-lg-2 col-lg-pull-8 col-sm-height">
-      <h4 class="range-title">
-        <b>Mountain Ranges</b>
-      </h4>
+  </div>
 
-      <div class="range-list">
-        <a href="wasatch-range.html">
-          <img src="images/range-1.png"/>
-          <h4>Wasatch Range</h4>
-        </a>
+  <div class="row">
+    <div class="fill-screen fixed-attachment" style="background-image: url(images/lake.jpg)"></div>
+  </div>
+  <div class="row content-filler">
 
-        <a href="mummy-range.html">
-          <img src="images/range-2.png"/>
-          <h4>Mummy Range</h4>
-        </a>
-
-        <a href="front-range.html">
-          <img src="images/range-3.png"/>
-          <h4>Front Range</h4>
-        </a>
-
-        <a href="sawtooth-range.html">
-          <img src="images/range-4.png"/>
-          <h4>Sawtooth Range</h4>
-        </a>
-
-        <a href="west-elk-mountains.html">
-          <img src="images/range-5.png"/>
-          <h4>West Elk Mountains</h4>
-        </a>
-      </div>
-    </aside>
-
-    <aside class="sports-icon-list col-xs-12 col-lg-2 hidden-md col-sm-height">
-      <a href="downhill.html">
-        <img src="images/icon-downhill.png" alt="Downhill" />
-        <h6>Downhill</h6>
-      </a>
-
-      <a href="snowboarding.html">
-        <img src="images/icon-snowboard.png" alt="Snowboarding" />
-        <h6>Snowboarding</h6>
-      </a>
-
-      <a href="bobsled.html">
-        <img src="images/icon-bobsled.png" alt="Bobsled" />
-        <h6>Bobsled</h6>
-      </a>
-
-      <a href="cross-country.html">
-        <img src="images/icon-cross-country.png" alt="Cross Country" />
-        <h6>Cross Country</h6>
-      </a>
-
-      <a href="biathlon.html">
-        <img src="images/icon-biathlon.png" alt="Biathlon" />
-        <h6>Biathlon</h6>
-      </a>
-    </aside>
   </div>
 </div>
 
@@ -191,3 +81,146 @@
 </footer>
 </body>
 </html>
+
+
+
+<!--<div class="sports-icon-list sports-list-top visible-md">-->
+<!--<div>-->
+<!--<a href="downhill.html">-->
+<!--<img src="images/icon-downhill.png" alt="Downhill"/>-->
+<!--<h6>Downhill</h6>-->
+<!--</a>-->
+
+<!--<a href="snowboarding.html">-->
+<!--<img src="images/icon-snowboard.png" alt="Snowboarding"/>-->
+<!--<h6>Snowboarding</h6>-->
+<!--</a>-->
+
+<!--<a href="bobsled.html">-->
+<!--<img src="images/icon-bobsled.png" alt="Bobsled"/>-->
+<!--<h6>Bobsled</h6>-->
+<!--</a>-->
+
+<!--<a href="cross-country.html">-->
+<!--<img src="images/icon-cross-country.png" alt="Cross Country"/>-->
+<!--<h6>Cross Country</h6>-->
+<!--</a>-->
+
+<!--<a href="biathlon.html">-->
+<!--<img src="images/icon-biathlon.png" alt="Biathlon"/>-->
+<!--<h6>Biathlon</h6>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+<!--<div class="container-fluid container-sm-height">-->
+<!--<div class="row row-sm-height">-->
+<!--<section class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 col-sm-height">-->
+<!--<article>-->
+<!--<h2>Why I Went Into the Lake</h2>-->
+<!--<img src="images/lake.jpg" />-->
+<!--<div class="row">-->
+<!--<p class="col-sm-10">-->
+<!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod-->
+<!--tempor incididunt ut labore et dolore magna aliqua.-->
+<!--</p>-->
+<!--<div class="col-sm-2">-->
+<!--<input type="button" class="btn btn-primary" value="More..." />-->
+<!--</div>-->
+<!--</div>-->
+<!--</article>-->
+
+<!--<article>-->
+<!--<h2>My Name is NOT Bullwinkle</h2>-->
+<!--<img src="images/elk.jpg" />-->
+<!--<div class="row">-->
+<!--<p class="col-sm-10">-->
+<!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod-->
+<!--tempor incididunt ut labore et dolore magna aliqua.-->
+<!--</p>-->
+<!--<div class="col-sm-2">-->
+<!--<input type="button" class="btn btn-primary" value="More..." />-->
+<!--</div>-->
+<!--</div>-->
+<!--</article>-->
+
+<!--<article>-->
+<!--<h2>There's Gotta be a Penguin Up Here Somewhere</h2>-->
+<!--<img src="images/snowboarder.jpg" />-->
+<!--<div class="row">-->
+<!--<p class="col-sm-10">-->
+<!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod-->
+<!--tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,-->
+<!--quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.-->
+<!--</p>-->
+<!--<div class="col-sm-2">-->
+<!--<input type="button" class="btn btn-primary" value="More..." />-->
+<!--</div>-->
+<!--</div>-->
+<!--</article>-->
+<!--</section>-->
+
+<!--<aside class="col-sm-3 col-sm-pull-9 col-lg-2 col-lg-pull-8 col-sm-height">-->
+<!--<h4 class="range-title">-->
+<!--<b>Mountain Ranges</b>-->
+<!--</h4>-->
+
+<!--<div class="range-list">-->
+<!--<a href="wasatch-range.html">-->
+<!--<img src="images/range-1.png"/>-->
+<!--<h4>Wasatch Range</h4>-->
+<!--</a>-->
+
+<!--<a href="mummy-range.html">-->
+<!--<img src="images/range-2.png"/>-->
+<!--<h4>Mummy Range</h4>-->
+<!--</a>-->
+
+<!--<a href="front-range.html">-->
+<!--<img src="images/range-3.png"/>-->
+<!--<h4>Front Range</h4>-->
+<!--</a>-->
+
+<!--<a href="sawtooth-range.html">-->
+<!--<img src="images/range-4.png"/>-->
+<!--<h4>Sawtooth Range</h4>-->
+<!--</a>-->
+
+<!--<a href="west-elk-mountains.html">-->
+<!--<img src="images/range-5.png"/>-->
+<!--<h4>West Elk Mountains</h4>-->
+<!--</a>-->
+<!--</div>-->
+<!--</aside>-->
+
+<!--<aside class="sports-icon-list col-xs-12 col-lg-2 hidden-md col-sm-height">-->
+<!--<a href="downhill.html">-->
+<!--<img src="images/icon-downhill.png" alt="Downhill" />-->
+<!--<h6>Downhill</h6>-->
+<!--</a>-->
+
+<!--<a href="snowboarding.html">-->
+<!--<img src="images/icon-snowboard.png" alt="Snowboarding" />-->
+<!--<h6>Snowboarding</h6>-->
+<!--</a>-->
+
+<!--<a href="bobsled.html">-->
+<!--<img src="images/icon-bobsled.png" alt="Bobsled" />-->
+<!--<h6>Bobsled</h6>-->
+<!--</a>-->
+
+<!--<a href="cross-country.html">-->
+<!--<img src="images/icon-cross-country.png" alt="Cross Country" />-->
+<!--<h6>Cross Country</h6>-->
+<!--</a>-->
+
+<!--<a href="biathlon.html">-->
+<!--<img src="images/icon-biathlon.png" alt="Biathlon" />-->
+<!--<h6>Biathlon</h6>-->
+<!--</a>-->
+<!--</aside>-->
+<!--</div>-->
+<!--</div>-->
+
